--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
+TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9
 DATABASEURL=host=localhost user=postgres password=151452 dbname=postgres port=49153 sslmode=disable
