--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
+    "react-number-format": "^4.9.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.1",
