--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
+    "react-notifications": "^1.7.3",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^2.1.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
